スライダ修正v2 20260225

--- a/css/municipality_lp/style.css
+++ b/css/municipality_lp/style.css
@@ -480,7 +480,9 @@ h2{
       }
     }
 
-    
+    .slick-list {
+      overflow: visible;
+    }
     .slick__inner {
       width: min(100%, 1120px);
       margin: 0 auto;
